Refactor: Update AGP, Gradle, and dependencies, migrate to KSP
- Updates Android Gradle Plugin to 8.8.2 in `settings.gradle.kts`.
- Updates Gradle version to 8.8 and sets the wrapper version accordingly.
- Updates dependencies in `gradle/libs.versions.toml`
    - Adds `supportV13` version to `gradle/libs.versions.toml`
    - Adds `annotation` version to `gradle/libs.versions.toml`
    - Adds `dagger-hilt-compiler` library to `gradle/libs.versions.toml`
    - Removes `hilt-compiler` library definition from `gradle/libs.versions.toml`.
- Removes unnecessary code from `app/build.gradle.kts`.
- Migrates from `kapt` to `ksp`.
- Configures Kotlin options in `app/build.gradle.kts` to set the JVM target to 22.
- Sets packaging options in `app/build.gradle.kts` to exclude META-INF files and use legacy packaging for JNI libraries.
- Sets the build tools version to 35.0.0.
- Updates `dependencies` in `app/build.gradle.kts` to use the version catalog.
- Updates build script dependencies in `build.gradle.kts`.
- Updates `repositoriesMode` to `PREFER_SETTINGS` in `settings.gradle.kts`.